kube/deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: presenter
  namespace: deckhub
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: presenter
    spec:
      containers:
      - image: deckhub/presenter:1.0.0-alpha4
        imagePullPolicy: Always
        name: presenter
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: presenter
  namespace: deckhub
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    app: presenter
  sessionAffinity: ClientIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: presenter
  namespace: deckhub
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: deckhub.app
    http:
      paths:
      - path: /presenter
        backend:
          serviceName: presenter
          servicePort: 80
